cmake_minimum_required(VERSION 3.23)
project(algorithmHa)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithmHa main.cpp boj/Fraction_1193.h boj/Snail_2869.h boj/ACM_10250.h boj/BNHJ_2775.h boj/Sugar_2839.h boj/BIGNum_10757.h boj/Prime_1978.h boj/Prime_2581.h boj/Factorization_11653.h boj/Factorization_1929.h)
